@@ -1,3 +1,6 @@
+2012-09-14 Emilie SAGNIEZ <emilie@in-cite.net>
+	* Add possibility to enable/disable CGU to appstore/datastore
+
 2011-08-31   <>
 
 	* initial code generated with kickstarter
